--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,24 +1,26 @@
-<h1>ブログ一覧</h1>
-<p><%= notice %></p>
-
-
-<table>
-  <tr>
-      <th>タイトル</th>
-      <th>内容</th>
-  </tr> 
- 
-  <% @blogs.each do |blog| %>
-  
-  <tr>
-      <td><%= blog.title %></td>
-      <td><%= blog.content %></td>
-      <td><%= link_to '詳細を確認する', blog_path(blog.id) %></td>
-       <td><%= link_to "ブログを編集する", edit_blog_path(blog.id) %></td>
-       <td><%= link_to 'ブログを削除する', blog_path(blog.id), method: :delete %></td>
-  </tr>
-  <% end %>
-
-</table>
-<br>
-<%= link_to '新しくブログを投稿する', new_blog_path %>
+<div class="container">
+  <header class="header">Bootstrap</header>
+  <div class="alert alert-success">alertクラス</div>
+<nav class="menu">
+    <ul class="row">
+        <li class="col-md-4">top</li>
+        <li class="col-md-4">menu1</li>
+        <li class="col-md-4">menu2</li>
+     </ul>
+</nav>
+<article>
+    <div class="contents">
+        <ul>
+            <li class="col-md-6">contents1</li>
+            <li class="col-md-6">contents2</li>
+        </ul>
+    </div>
+    <div class="topic">
+         <ul>
+            <li>bootstrapを使ってレスポンシブデザインを実現しよう！</li>
+            <li>やればできる！bootstrapを使ってみよう！</li>
+            <li>怖くない！レスポンシブデザインができるようになればWebアプリケーションもワンランク上に！</li>
+        </ul>
+    </div>
+</article>
+  </div>
