--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,34 @@
 <html>
   <head>
     <title>Sample</title>
-    <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
   </head>
+<body>
 
-  <body>
-    <%= yield %>
-  </body>
+  <header>
+    <ul>
+      <li><a href="https://railstutorial-keiko5645.c9users.io/twitters/new">HOME</a></li>
+      <li><a href="https://railstutorial-keiko5645.c9users.io/twitters">つぶやき一覧</a></li>
+      <li><a href="https://railstutorial-keiko5645.c9users.io/twitters/new">新規投稿</a></li>
+      <!--<nav class="menu">-->
+      <!--    <ul class="row">-->
+      <!--        <li class="col-md-4">top</li>-->
+      <!--        <li class="col-md-4">menu1</li>-->
+      <!--        <li class="col-md-4">menu2</li>-->
+      <!--     </ul>-->
+      <!--</nav>-->
+
+    </ul>
+  </header>
+
+<%= yield %>
+
+  <footer>
+    <p>運営会社DIVE INTO CODE株式会社</p>
+    <p>© 2015-2016 Copyright DIVE INTO CODE Corp.</p>
+  </footer>
+
+</body>
 </html>
