--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,20 +6,23 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   </head>
-<body>
+  
+  <body>
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
 
-  <header>
-    <ul>
-      <li><%= link_to 'トップページ', top_twitters_path %></li>
-      <li><%= link_to 'つぶやき一覧', twitters_path %></a></li>
-      <li><%= link_to '新規投稿', new_twitter_path %></a></li>
-    
+    <% if logged_in? %>
+      <%= link_to "Profile", user_path(current_user.id) %>
+      <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+    <% else %>
+      <%= link_to "Sign up", new_user_path %>
+      <%= link_to "Login", new_session_path %>
+    <% end %>
 
-    </ul>
-  </header>
-
-<%= yield %>
-
+    <%= yield %>
+  </body>
+  
   <footer>
     <p>運営会社DIVE INTO CODE株式会社</p>
     <p>© 2015-2016 Copyright DIVE INTO CODE Corp.</p>
