--- a/app/views/twitters/top.html.erb
+++ b/app/views/twitters/top.html.erb
@@ -28,26 +28,31 @@
       チームメンバーが、今どのようなタスクを行っているかリアルタイムで把握することができます。
     </p>
   </section>
-  <section class="function">
+  <section class="row function">
     <h1>Function</h1>
+    
     <div class="function-images">
       <div class="function-image">
         <%= image_tag("key.png") %>
         <p>ログイン機能</p>
       </div>
+      
       <div class="function-image">
         <%= image_tag("mails.png") %>
         <p>メール送信機能</p>
       </div>
+      
       <div class="function-image">
         <%= image_tag("girls.png") %>
         <p>友達つながり機能</p>
       </div>
+      
       <div class="function-image">
         <%= image_tag("comment.png") %>
         <p>コメント投稿機能</p>
     </div>
   </section>
+  
   <footer>
     <p>運営会社DIVE INTO CODE株式会社</p>
     <p>© 2015-2016 Copyright DIVE INTO CODE Corp.</p>
