--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -31,7 +31,7 @@ header ul:after {
   padding-bottom: 15%;
   width: 100%;
   background-size: cover;
-  background-image: url(/assets/header.png);
+  background-image: url(/image/header.png);
   background-attachment: fixed;
 }
 
