--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -31,7 +31,8 @@ header ul:after {
   padding-bottom: 15%;
   width: 100%;
   background-size: cover;
-  background-image: url(/assets/header.jpg);
+  /*background-image: url(/assets/header.jpg);*/
+  background-image: image-url("/assets/header.jpg");
   background-attachment: fixed;
 }
 
