--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -32,7 +32,7 @@ header ul:after {
   width: 100%;
   background-size: cover;
   /*background-image: url(/assets/header.jpg);*/
-  background-image: image-url("header.jpg");
+  background-image: image-url("/assets/header.jpg");
   background-attachment: fixed;
 }
 
