--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,4 @@
 <p>メールアドレス: <%= @user.email %></p>
 
 <p>ブログ一覧は: <%= link_to "ここ", twitters_path %></p>
+<p>新しくブログを投稿するには: <%= link_to "ここ", new_user_path %></p>
