--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -31,8 +31,7 @@ header ul:after {
   padding-bottom: 15%;
   width: 100%;
   background-size: cover;
-  /*background-image: url(/assets/header.jpg);*/
-  background-image: image-url("/assets/header.jpg");
+  background-image: image-url("/assets/metal.jpg");
   background-attachment: fixed;
 }
 
