--- a/app/views/twitters/index.html.erb
+++ b/app/views/twitters/index.html.erb
@@ -1,24 +1,26 @@
 <div class="container">
 
   <!--<div class="alert alertsuccess">ツイートを投稿しました</div>-->
-  <% if flash[:notice] %>
-    <div class="alert alertsuccess"><%= flash[:notice] %></div>
-  <% end %>
-  <h1>つぶやき一覧</h1>
+<% if flash[:notice] %>
+<div class="alert alertsuccess"><%= flash[:notice] %></div>
+<% end %>
+<h1>つぶやき一覧</h1>
   
 <article>
     <div class="container">
         
-              <% @twitters.each do |twitter| %>
-               <ul class="row col-lg-6">
-                  <li class="aaa "><%= twitter.content %></li>
-                  <li class="col-lg-4 col-xs-12 "><%= link_to "詳細を確認する", twitter_path(twitter.id), class: 'btn btn-info'%></li>
-                  <li class="col-lg-4 col-xs-12 "><%= link_to "ブログを編集する", edit_twitter_path(twitter.id), class: 'btn btn-info'%></li>
-                  <li class="col-lg-4 col-xs-12 "><%= link_to "ブログを削除する", twitter_path(twitter.id), method: :delete , class: 'btn btn-info'%></li>
-               </ul>    
-              <% end %>
+    <% @twitters.each do |twitter| %>
+    <ul class="row col-lg-6">
+          <li class="aaa "><%= twitter.content %></li>
+          <li class="col-lg-4 col-xs-12 "><%= link_to "詳細を確認する", twitter_path(twitter.id), class: 'btn btn-info'%></li>
+          <%  if twitter.user_id == current_user.id %>
+          <li class="col-lg-4 col-xs-12 "><%= link_to "ブログを編集する", edit_twitter_path(twitter.id), class: 'btn btn-info'%></li>
+          <li class="col-lg-4 col-xs-12 "><%= link_to "ブログを削除する", twitter_path(twitter.id), method: :delete , class: 'btn btn-info'%></li>
+          <% end %>
+    </ul>    
+    <% end %>
            
     </div>
 </article>
 <h2><%= link_to '新しくブログを投稿する', new_twitter_path %></h2>
-  </div>
+</div>
