--- a/app/views/twitters/index.html.erb
+++ b/app/views/twitters/index.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
 
-  <!--<div class="alert alertsuccess">ツイートを投稿しました</div>-->
 <% if flash[:notice] %>
-<div class="alert alertsuccess"><%= flash[:notice] %></div>
+<div class="alert alertsuccess">
+
+
+
 <% end %>
 <h1>つぶやき一覧</h1>
   
