--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,25 +1,32 @@
-<%= form_with(model: @contact, local: true ,url: choose_new_or_edit ) do |form| %>
-  <% if @contact.errors.any? %>
+<%= form_with(model: contact, local: true) do |form| %>
+  <% if contact.errors.any? %>
     <div id="error_explanation">
-      <h2><%= @contact.errors.count %>件のエラーがあります。</h2>
-      <ul>
+      <h2><%= pluralize(contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
 
-      <% @contact.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+      <ul>
+      <% contact.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="contact_title">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+  <div class="field">
+    <%= form.label :name %>
+    <%= form.text_field :name, id: :contact_name %>
   </div>
-  <div class="contact_title">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-  <%= form.submit %>
-<% end %>
 
-<%= link_to "ブログ一覧画面にもどる", contacts_path %>
+  <div class="field">
+    <%= form.label :email %>
+    <%= form.text_field :email, id: :contact_email %>
+  </div>
+
+  <div class="field">
+    <%= form.label :content %>
+    <%= form.text_area :content, id: :contact_content %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit %>
+  </div>
+<% end %>
