--- a/app/views/twitters/show.html.erb
+++ b/app/views/twitters/show.html.erb
@@ -1,9 +1,16 @@
 <h1>ブログ詳細画面</h1>
-<p>内容: <%= @twitter.content %></p>
+    <p>内容: <%= @twitter.content %></p>
 
     <% if @favorite.present? %>
     <%= link_to 'お気に入り解除する', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
     <% else %>
     <%= link_to 'お気に入りする', favorites_path(twitter_id: @twitter.id), method: :post, class: 'btn btn-primary' %>
     <% end %>
-
+    
+    <p>
+    <strong>Image:</strong>
+    <%= image_tag @twitter.image %>
+    </p>
+    
+    <%= link_to 'Edit', edit_twitter_path(@twitter) %> |
+    <%= link_to 'Back', twitters_path %>
