--- a/app/views/twitters/index.html.erb
+++ b/app/views/twitters/index.html.erb
@@ -14,7 +14,7 @@
     <ul class="row col-lg-6">
           <li class="aaa ">
           <%= twitter.content %>
-          <%= twitter.image %>
+          <%= image_tag twitter.image %>
           </li>
           
           <li class="col-lg-4 col-xs-12 "><%= link_to "詳細を確認する", twitter_path(twitter.id), class: 'btn btn-info'%></li>
