--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
 <h1><%= @user.name %>のページ</h1>
+ 
+<%= image_tag(@user.image.url) %>
 
 <p>メールアドレス: <%= @user.email %></p>
 <ul>お気に入りしたブログはこれだよ⬇️</ul>
