--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,6 +22,9 @@
 
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
+  
+  <%= f.label :image_file, 'profile image' %>
+  <%= f.file_field :image %>
 
   <%= f.submit "Create my account" %>
 <% end %>
